--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,35 @@
 events {}
 http {
     
-    upstream read {
+    upstream read_manager {
         server read_manager_one:5000;
         server read_manager_two:5000;
+        # # enable health checks
+        # health_check interval=5s;
+        # health_check_timeout 2s;
+        # health_check_keepalive_requests 1;
+        # health_check_http_version 1.1;
+        # health_check_request_headers {
+        #     Host: $host;
+        # }
+        # health_check_healthy {
+        #     status: 200;
+        # }
+        # health_check_unhealthy {
+        #     status: 429;
+        # }
      }
 
      server {
          listen 80;
          location / {
               proxy_pass http://read_manager;
+              proxy_redirect          off;
+              proxy_next_upstream     error timeout invalid_header http_500;
+              proxy_connect_timeout   2;
+              proxy_set_header        Host            $host;
+              proxy_set_header        X-Real-IP       $remote_addr;
+              proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
           }
      }
 }
