--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
         container_name: reverse_proxy
         volumes:
             - ./nginx.conf:/etc/nginx/nginx.conf
-            # - ./data/reverse_proxy:/app/scratch
+            # - ../data/reverse_proxy:/app/scratch
         ports:
             - 8080:80
         deploy:
@@ -20,7 +20,7 @@ services:
         container_name: write_manager
         hostname: write_manager
         # volumes:
-            # - ./data/write_manager:/app/scratch
+            # - ../data/write_manager:/app/scratch
         ports:
             -   8083:8080
         deploy: 
@@ -29,12 +29,16 @@ services:
             - custom
         entrypoint: python
         command: ./ServiceProviders/WMWrapper.py
+        depends_on:
+            - main_db_three
+        environment:
+            - DB_NAME=main_db_three
 
     read_manager_one:
         image: mbq:latest
         container_name: read_manager_one
         # volumes:
-            # - ./data/read_manager_one:/app/scratch
+            # - ../data/read_manager_one:/app/scratch
         ports:
             - 8081:8081
         deploy:
@@ -53,9 +57,9 @@ services:
         image: mbq:latest
         container_name: read_manager_two
         # volumes:
-            # - ./data/read_manager_two:/app/scratch
+            # - ../data/read_manager_two:/app/scratch
         ports:
-            - 8082:8082
+            - 8082:8081
         deploy:
             replicas: 1
         networks:       
@@ -64,18 +68,18 @@ services:
         command: ./ServiceProviders/RMWrapper.py
         hostname: read_manager_two
         depends_on:
-            - main_db_one
+            - main_db_two
         environment:
-            - DB_NAME=main_db_one
+            - DB_NAME=main_db_two
     
     broker_one:
         image: mbq:latest
         build: ./broker
         container_name: broker_one
         # volumes:
-            # - ./data/broker_one:/app/scratch
+            # - ../data/broker_one:/app/scratch
         ports:
-            - 9090:9090
+            - 9090:8080
         networks:       
             - custom
         restart: always
@@ -91,9 +95,9 @@ services:
         image: mbq:latest
         container_name: broker_two
         # volumes:
-            # - ./data/broker_two:/app/scratch
+            # - ../data/broker_two:/app/scratch
         ports:
-            - 9091:9091
+            - 9091:8080
         networks:       
             - custom
         restart: always
@@ -109,11 +113,11 @@ services:
         image: mbq:latest
         container_name: broker_three
         # volumes:
-            # - ./data/broker_three:/app/scratch
+            # - ../data/broker_three:/app/scratch
         networks:       
             - custom
         ports:
-            - 9092:9092
+            - 9092:8080
         restart: always
         hostname: broker_three
         depends_on:
@@ -128,7 +132,7 @@ services:
         container_name: main_db_one
         restart: always
         volumes:
-                - ./data/main_db_one:/var/lib/postgresql/data
+                - ../data/main_db_one:/var/lib/postgresql/data
         hostname: main_db_one
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -143,7 +147,7 @@ services:
         container_name: main_db_two
         restart: always
         volumes:
-                - ./data/main_db_two:/var/lib/postgresql/data
+                - ../data/main_db_two:/var/lib/postgresql/data
         hostname: main_db_two
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -151,14 +155,30 @@ services:
         networks:       
             - custom
         ports:
-            - 5433:5433
+            - 5433:5432
+
+
+    main_db_three: 
+        image: postgres:13
+        container_name: main_db_three
+        restart: always
+        volumes:
+                - ../data/main_db_three:/var/lib/postgresql/data
+        hostname: main_db_three
+        environment:
+                - 'POSTGRES_PASSWORD=postgres'
+                - 'POSTGRES_DB=main_db_three'
+        networks:       
+            - custom
+        ports:
+            - 5437:5432
 
     db_one:
         image: postgres:13
         container_name: db_one
         restart: always
         volumes:
-                - ./data/db_one:/var/lib/postgresql/data
+                - ../data/db_one:/var/lib/postgresql/data
         hostname: db_one
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -166,14 +186,14 @@ services:
         networks:       
             - custom
         ports:
-            - 5434:5434
+            - 5434:5432
         
     db_two:
         image: postgres:13
         container_name: db_two
         restart: always
         volumes:
-                - ./data/db_two:/var/lib/postgresql/data
+                - ../data/db_two:/var/lib/postgresql/data
         hostname: db_two
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -181,14 +201,14 @@ services:
         networks:       
             - custom
         ports:
-            - 5435:5435
+            - 5435:5432
 
     db_three:
         image: postgres:13
         container_name: db_three
         restart: always
         volumes:
-                - ./data/db_three:/var/lib/postgresql/data
+                - ../data/db_three:/var/lib/postgresql/data
         hostname: db_three
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -196,7 +216,7 @@ services:
         networks:       
             - custom
         ports:
-            - 5436:5436
+            - 5436:5432
         
 networks:
     custom: {}
