--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ events {}
 http {
     
     upstream read_manager {
-        server read_manager_one:5000;
-        server read_manager_two:5000;
+        server read_manager_one:8081;
+        server read_manager_two:8081;
         # # enable health checks
         # health_check interval=5s;
         # health_check_timeout 2s;
@@ -21,15 +21,15 @@ http {
      }
 
      server {
-         listen 80;
+        #  listen 80;
          location / {
               proxy_pass http://read_manager;
-              proxy_redirect          off;
-              proxy_next_upstream     error timeout invalid_header http_500;
-              proxy_connect_timeout   2;
-              proxy_set_header        Host            $host;
-              proxy_set_header        X-Real-IP       $remote_addr;
-              proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            #   proxy_redirect          off;
+            #   proxy_next_upstream     error timeout invalid_header http_500;
+            #   proxy_connect_timeout   2;
+            #   proxy_set_header        Host            $host;
+            #   proxy_set_header        X-Real-IP       $remote_addr;
+            #   proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
           }
      }
 }
