--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
      server {
         #  listen 80;
          location / {
-              proxy_pass http://read_manager;
+              proxy_pass http://read_manager/;
             #   proxy_redirect          off;
             #   proxy_next_upstream     error timeout invalid_header http_500;
             #   proxy_connect_timeout   2;
