load balancer setup

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,17 +5,48 @@ http {
         server read_manager_one:5000;
         server read_manager_two:5000;
      }
+     upstream write_manager{
+          server write_manager:5000;
+     }
+     upstream topics_GET{
+          server read_manager_one:5000;
+          server read_manager_two:5000;
+     }
+     upstream topics_POST{
+          server write_manager;
+     }
+     
 
      server {
         #  listen 80;
-         location / {
-              proxy_pass http://read_manager/;
-              proxy_redirect          off;
-              proxy_next_upstream     error timeout invalid_header http_500;
-              proxy_connect_timeout   2;
-              proxy_set_header        Host            $host;
-              proxy_set_header        X-Real-IP       $remote_addr;
-              proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+     #     location / {
+     #          proxy_pass http://read_manager/;
+     #          proxy_redirect          off;
+     #          proxy_next_upstream     error timeout invalid_header http_500;
+     #          proxy_connect_timeout   2;
+     #          proxy_set_header        Host            $host;
+     #          proxy_set_header        X-Real-IP       $remote_addr;
+     #          proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+     #              health_check
+     #      }
+          location /topics{
+               proxy_pass http://topics_$request_method;
           }
+          location /topics/partitions{
+               proxy_pass http://read_manager/topics/partitions;
+          }
+          location /consumer/register{
+               proxy_pass http://read_manager/consumer/register;
+          }         
+          location /consumer/consume{
+               proxy_pass http://read_manager/consumer/consume;
+          }         
+          location /producer/register{
+               proxy_pass http://write_manager/producer/register;
+          }
+          location /producer/produce{
+               proxy_pass http://write_manager/producer/produce;
+          }
+          # add broker and heartbeat??
      }
 }
