--- a/compose.yaml
+++ b/compose.yaml
@@ -1,111 +1,111 @@
 version: '3.9'
 services:
-    reverse_proxy:
-        image: nginx
-        container_name: reverse_proxy
-        volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf
-        ports:
-            - 8080:80
-        deploy:
-        networks:       
-            - custom
-        depends_on:
-            - read_manager_one
-            - read_manager_two
+#     reverse_proxy:
+#         image: nginx
+#         container_name: reverse_proxy
+#         volumes:
+#             - ./nginx.conf:/etc/nginx/nginx.conf
+#         ports:
+#             - 8080:80
+#         deploy:
+#         networks:       
+#             - custom
+#         depends_on:
+#             - read_manager_one
+#             - read_manager_two
     
-    write_manager:
-        image: mbq:latest
-        container_name: write_manager
-        hostname: write_manager
-        restart: always
-        deploy: 
-            replicas: 1
-        networks:       
-            - custom
-        entrypoint: python
-        command: ./ServiceProviders/WMWrapper.py
-        depends_on:
-            - main_db_three
-        environment:
-            - DB_NAME=main_db_three
+#     write_manager:
+#         image: mbq:latest
+#         container_name: write_manager
+#         hostname: write_manager
+#         restart: always
+#         deploy: 
+#             replicas: 1
+#         networks:       
+#             - custom
+#         entrypoint: python
+#         command: ./ServiceProviders/WMWrapper.py
+#         depends_on:
+#             - main_db_three
+#         environment:
+#             - DB_NAME=main_db_three
 
-    read_manager_one:
-        image: mbq:latest
-        container_name: read_manager_one
-        deploy:
-            replicas: 1
-        restart: always
+#     read_manager_one:
+#         image: mbq:latest
+#         container_name: read_manager_one
+#         deploy:
+#             replicas: 1
+#         restart: always
 
-        networks:       
-            - custom
-        entrypoint: python
-        command: ./ServiceProviders/RMWrapper.py
-        hostname: read_manager_one
-        depends_on:
-            - main_db_one
-        environment:
-            - DB_NAME=main_db_one
+#         networks:       
+#             - custom
+#         entrypoint: python
+#         command: ./ServiceProviders/RMWrapper.py
+#         hostname: read_manager_one
+#         depends_on:
+#             - main_db_one
+#         environment:
+#             - DB_NAME=main_db_one
 
-    read_manager_two:
-        image: mbq:latest
-        container_name: read_manager_two
-        deploy:
-            replicas: 1
-        restart: always
+#     read_manager_two:
+#         image: mbq:latest
+#         container_name: read_manager_two
+#         deploy:
+#             replicas: 1
+#         restart: always
 
-        networks:       
-            - custom
-        entrypoint: python
-        command: ./ServiceProviders/RMWrapper.py
-        hostname: read_manager_two
-        depends_on:
-            - main_db_two
-        environment:
-            - DB_NAME=main_db_two
+#         networks:       
+#             - custom
+#         entrypoint: python
+#         command: ./ServiceProviders/RMWrapper.py
+#         hostname: read_manager_two
+#         depends_on:
+#             - main_db_two
+#         environment:
+#             - DB_NAME=main_db_two
     
-    broker_one:
-        image: mbq:latest
-        build: ./broker
-        container_name: broker_one
-        networks:       
-            - custom
-        restart: always
-        hostname: broker_one
-        depends_on:
-            - db_one
-        environment:
-            - DB_NAME=db_one
-        entrypoint: python
-        command: ./Brokers/BrokerWrapper.py
+#     broker_one:
+#         image: mbq:latest
+#         build: ./broker
+#         container_name: broker_one
+#         networks:       
+#             - custom
+#         restart: always
+#         hostname: broker_one
+#         depends_on:
+#             - db_one
+#         environment:
+#             - DB_NAME=db_one
+#         entrypoint: python
+#         command: ./Brokers/BrokerWrapper.py
 
-    broker_two: 
-        image: mbq:latest
-        container_name: broker_two
-        networks:       
-            - custom
-        restart: always
-        hostname: broker_two
-        depends_on:
-            - db_two
-        environment:
-            - DB_NAME=db_two
-        entrypoint: python
-        command: ./Brokers/BrokerWrapper.py
+#     broker_two: 
+#         image: mbq:latest
+#         container_name: broker_two
+#         networks:       
+#             - custom
+#         restart: always
+#         hostname: broker_two
+#         depends_on:
+#             - db_two
+#         environment:
+#             - DB_NAME=db_two
+#         entrypoint: python
+#         command: ./Brokers/BrokerWrapper.py
     
-    broker_three: 
-        image: mbq:latest
-        container_name: broker_three
-        networks:       
-            - custom
-        restart: always
-        hostname: broker_three
-        depends_on:
-            - db_three
-        environment:
-            - DB_NAME=db_three
-        entrypoint: python
-        command: ./Brokers/BrokerWrapper.py
+#     broker_three: 
+#         image: mbq:latest
+#         container_name: broker_three
+#         networks:       
+#             - custom
+#         restart: always
+#         hostname: broker_three
+#         depends_on:
+#             - db_three
+#         environment:
+#             - DB_NAME=db_three
+#         entrypoint: python
+#         command: ./Brokers/BrokerWrapper.py
 
     main_db_one: 
         image: postgres:13
@@ -126,7 +126,9 @@ services:
             retries: 3
         networks:       
             - custom
-
+        depends_on:
+            main_db_three:
+                    condition: service_healthy
     main_db_two: 
         image: postgres:13
         container_name: main_db_two
@@ -146,6 +148,11 @@ services:
             retries: 3
         networks:       
             - custom
+        depends_on:
+            main_db_three:
+                    condition: service_healthy
+
+    
 
 
     main_db_three: 
@@ -154,8 +161,12 @@ services:
         restart: always
         volumes:
                 - ../data/main_db_three:/var/lib/postgresql/data
+                - ../data/main_db_one:/tmp/postgres_read_1
+                - ../data/main_db_two:/tmp/postgres_read_2
                 - ./our-postgres.conf:/etc/postgresql/postgresql.conf
                 - ./our-pg_hba.conf:/etc/postgresql/pg_hba.conf
+                - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+
         hostname: main_db_three
         environment:
                 - 'POSTGRES_PASSWORD=postgres'
@@ -168,59 +179,59 @@ services:
         networks:       
             - custom
 
-    db_one:
-        image: postgres:13
-        container_name: db_one
-        restart: always
-        volumes:
-                - ../data/db_one:/var/lib/postgresql/data
-        hostname: db_one
-        environment:
-                - 'POSTGRES_PASSWORD=postgres'
-                - 'POSTGRES_DB=db_one'
-        healthcheck:
-            test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_one'"]
-            interval: 10s
-            timeout: 3s
-            retries: 3
-        networks:       
-            - custom
+#     db_one:
+#         image: postgres:13
+#         container_name: db_one
+#         restart: always
+#         volumes:
+#                 - ../data/db_one:/var/lib/postgresql/data
+#         hostname: db_one
+#         environment:
+#                 - 'POSTGRES_PASSWORD=postgres'
+#                 - 'POSTGRES_DB=db_one'
+#         healthcheck:
+#             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_one'"]
+#             interval: 10s
+#             timeout: 3s
+#             retries: 3
+#         networks:       
+#             - custom
         
-    db_two:
-        image: postgres:13
-        container_name: db_two
-        restart: always
-        volumes:
-                - ../data/db_two:/var/lib/postgresql/data
-        hostname: db_two
-        environment:
-                - 'POSTGRES_PASSWORD=postgres'
-                - 'POSTGRES_DB=db_two'
-        healthcheck:
-            test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_two'"]
-            interval: 10s
-            timeout: 3s
-            retries: 3
-        networks:       
-            - custom
+#     db_two:
+#         image: postgres:13
+#         container_name: db_two
+#         restart: always
+#         volumes:
+#                 - ../data/db_two:/var/lib/postgresql/data
+#         hostname: db_two
+#         environment:
+#                 - 'POSTGRES_PASSWORD=postgres'
+#                 - 'POSTGRES_DB=db_two'
+#         healthcheck:
+#             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_two'"]
+#             interval: 10s
+#             timeout: 3s
+#             retries: 3
+#         networks:       
+#             - custom
         
-    db_three:
-        image: postgres:13
-        container_name: db_three
-        restart: always
-        volumes:
-                - ../data/db_three:/var/lib/postgresql/data
-        hostname: db_three
-        environment:
-                - 'POSTGRES_PASSWORD=postgres'
-                - 'POSTGRES_DB=db_three'
-        healthcheck:
-            test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_three'"]
-            interval: 10s
-            timeout: 3s
-            retries: 3
-        networks:       
-            - custom
+#     db_three:
+#         image: postgres:13
+#         container_name: db_three
+#         restart: always
+#         volumes:
+#                 - ../data/db_three:/var/lib/postgresql/data
+#         hostname: db_three
+#         environment:
+#                 - 'POSTGRES_PASSWORD=postgres'
+#                 - 'POSTGRES_DB=db_three'
+#         healthcheck:
+#             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_three'"]
+#             interval: 10s
+#             timeout: 3s
+#             retries: 3
+#         networks:       
+#             - custom
         
 networks:
     custom:
